--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "description": "Software de gestion de Restaurant con mesas de Pool",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"  
+  },
+  "build": {
+    "appId": "com.maesoft.tsunami_pool",  
+    "directories": {
+      "output": "dist"  
+    },
+    "win": {
+      "target": "NSIS" 
+    }
   },
   "author": "Matias A. Eguia",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^25.5.0"
+    "electron": "^25.5.0",
+    "electron-builder": "^24.6.4"
   },
   "dependencies": {
     "mysql2": "^3.6.2"
